crates/tyrano-syntax/tests/data/invalid/unterminated_tag.ks
テキスト[ptext text=abc
次の行
